--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,10 @@ classifiers =
 packages = find:
 python_requires = >=3.6
 install_requires =
+    einops
+    numpy
     torch
+    pillow
 
 
 [options.packages.find]
