--- a/setup.cfg
+++ b/setup.cfg
@@ -20,8 +20,9 @@ python_requires = >=3.6
 install_requires =
     einops
     numpy
-    torch
     pillow
+    torch
+    torchvision
 
 
 [options.packages.find]
