--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,8 +23,8 @@ jobs:
       - name: tests_unit
         run: python -m unittest discover --start-directory ./tests_unit
       # run integration tests
-      - name: tests_integration
-        run: python -m unittest discover --start-directory ./tests_integration
+#      - name: tests_integration
+#        run: python -m unittest discover --start-directory ./tests_integration
 
       # prepare version update
       - name: extract tag
